@@ -9,6 +9,9 @@
    - deraadt@cvs.openbsd.org 2002/07/04 04:15:33
      [key.c monitor_wrap.c sftp-glob.c ssh-dss.c ssh-rsa.c]
      patch memory leaks; grendel@zeitbombe.org
+   - deraadt@cvs.openbsd.org 2002/07/04 08:12:15
+     [channels.c packet.c]
+     blah blah minor nothing as i read and re-read and re-read...
 
 20020705
  - (tim) [configure.ac] AIX 4.2.1 has authenticate() in libs.
@@ -1292,4 +1295,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2342 2002/07/07 22:10:15 mouring Exp $
+$Id: ChangeLog,v 1.2343 2002/07/07 22:11:51 mouring Exp $
